feat: integrate Utoipa (OpenAPI) with auto-export and Swagger UI
🎯 Major Changes:
- Integrated utoipa v5 + utoipa-swagger-ui v9 for OpenAPI documentation
- Upgraded axum from 0.7 to 0.8 for compatibility
- Added auto-export OpenAPI spec feature (--features export-spec)

📦 Dependencies Added:
- utoipa = 5 (OpenAPI code-first)
- utoipa-swagger-ui = 9 (Swagger UI)
- uuid, chrono, tower-http, serde_yaml

🏗️ Structure Created:
services/user-service/src/
  ├── handlers.rs      # API handlers with #[utoipa::path] annotations
  ├── models.rs        # DTOs with #[derive(ToSchema)]
  ├── openapi.rs       # OpenAPI specification definition
  └── main.rs          # Axum server with Swagger UI + export logic

shared/openapi/
  ├── README.md        # Documentation and usage guide
  └── user.yaml        # Auto-generated OpenAPI spec (8.7KB)

✨ Features:
- Mock API endpoints: register, login, refresh token, list users
- Swagger UI available at http://localhost:3000/docs
- OpenAPI spec export with: cargo build --features export-spec
- Security: JWT Bearer authentication schema
- Structured error responses with ErrorResp model

📝 API Endpoints:
- POST /api/v1/auth/register    # User registration
- POST /api/v1/auth/login       # User login
- POST /api/v1/auth/refresh     # Token refresh
- GET  /api/v1/users            # List users (protected)
- GET  /health                  # Health check

🔧 Usage:
# Export OpenAPI spec
cd services/user-service
cargo build --features export-spec
cargo run --features export-spec

# Development (no export)
cargo run

# Access Swagger UI
curl http://localhost:3000/docs

📚 Next Steps:
- Add real database integration
- Implement JWT authentication
- Create CI/CD pipeline for spec merging
- Generate frontend SDK from api.yaml

Refs: Clean Axum Demo template, Utoipa docs via Context7

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,13 @@
 [workspace]
 members = [
     "services/*",
-    "shared/*",
 ]
+
+# Shared libraries will be added here when created
+# "shared/common",
+# "shared/db",
+# "shared/auth",
+# "shared/events",
 
 [workspace.package]
 version = "0.1.0"
@@ -14,7 +19,7 @@ authors = ["Your Name <you@example.com>"]
 tokio = { version = "1", features = ["full"] }
 
 # Axum is the web framework
-axum = "0.7"
+axum = "0.8"
 
 # Serde is for serialization and deserialization
 serde = { version = "1.0", features = ["derive"] }
@@ -33,3 +38,16 @@ config = "0.14"
 # For handling errors
 anyhow = "1.0"
 thiserror = "1.0"
+
+# For OpenAPI documentation
+utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
+utoipa-swagger-ui = { version = "9", features = ["axum"] }
+
+# UUID support
+uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
+
+# Date/Time support
+chrono = { version = "0.4", features = ["serde"] }
+
+# Tower middleware utilities
+tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }
