chore: cleanup project structure and update author info 🧹
🔧 Changes:
- ✅ Removed duplicate empty directories (backend/, frontend/)
- ✅ Updated workspace author: tymon3568 <tymon3568@gmail.com>
- ✅ Cleaned up project structure

📁 Current Structure (VERIFIED):
- ✅ services/ (5 microservices with code)
- ✅ shared/openapi/ (OpenAPI specs)
- ✅ infra/ (docker-compose, migrations)
- ✅ .github/workflows/ (CI/CD)
- ✅ Documentation (README, WARP, TODO, ARCHITECTURE)

📊 Services Status:
- user-service: 4 Rust files ✅
- inventory-service: 1 Rust file ✅
- order-service: 1 Rust file ✅
- payment-service: 1 Rust file ✅
- integration-service: 1 Rust file ✅

✅ All services have Cargo.toml
✅ Workspace members configured correctly
✅ No duplicate directories
✅ Ready to follow TODO.md Phase 1

Next: Start Phase 1 implementation per TODO.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [
 [workspace.package]
 version = "0.1.0"
 edition = "2021"
-authors = ["Your Name <you@example.com>"]
+authors = ["tymon3568 <tymon3568@gmail.com>"]
 
 [workspace.dependencies]
 # Tokio is the async runtime
