refactor(user-service): implement Clean Architecture layers (common + domain) ✨
🏗️ Progress Update: 50% Complete

✅ Completed Layers:

1️⃣ Common Layer (Cross-cutting concerns):
   - config.rs: Environment config with dotenvy
   - app_state.rs: AppState with PgPool + Config
   - bootstrap.rs: Service initialization
   - jwt.rs: JWT encode/decode (access + refresh tokens)
   - hash_util.rs: bcrypt password hashing
   - error.rs: AppError with IntoResponse (from previous commit)

2️⃣ Domain Layer (Business logic contracts):
   - domains/auth/dto/auth_dto.rs: DTOs with utoipa + validator
   - domains/auth/domain/model.rs: User & Tenant entities
   - domains/auth/domain/repository.rs: Repository traits
   - domains/auth/domain/service.rs: AuthService trait

📦 Dependencies Added:
   - bcrypt 0.15
   - jsonwebtoken 9.2
   - validator 0.16
   - dotenvy 0.15
   - async-trait 0.1

🔄 Next Steps:
   - [ ] Infrastructure layer (repo + service implementations)
   - [ ] API layer (handlers + routes)
   - [ ] Module wiring (mod.rs files)
   - [ ] app.rs + main.rs refactor
   - [ ] OpenAPI migration

📖 Following:
   - Clean Axum Demo template
   - Axum 0.8.4 best practices
   - Dependency injection via State extractor
   - Multi-tenant architecture

--- a/services/user-service/Cargo.toml
+++ b/services/user-service/Cargo.toml
@@ -21,6 +21,11 @@ uuid = { workspace = true }
 chrono = { workspace = true }
 tower-http = { workspace = true }
 serde_yaml = "0.9"
+bcrypt = "0.15"
+jsonwebtoken = "9.2"
+validator = { version = "0.16", features = ["derive"] }
+dotenvy = "0.15"
+async-trait = "0.1"
 
 [features]
 default = []
