--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -94,7 +94,7 @@ jobs:
       
       - uses: Swatinem/rust-cache@v2
         with:
-          workspaces: "services/user-service"
+          workspaces: "services/user_service"
       
       - uses: taiki-e/install-action@v2
         with:
@@ -102,7 +102,7 @@ jobs:
       
       - name: Run tests with coverage
         run: |
-          cd services/user-service
+          cd services/user_service
           cargo llvm-cov \
             --all-features \
             --lcov \
