--- a/services/integration_service/Cargo.toml
+++ b/services/integration_service/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "order-service"
+name = "integration_service"
 version = { workspace = true }
 edition = { workspace = true }
 authors = { workspace = true }
