--- a/services/order_service/Cargo.toml
+++ b/services/order_service/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "inventory-service"
+name = "order_service"
 version = { workspace = true }
 edition = { workspace = true }
 authors = { workspace = true }
