--- a/services/payment_service/Cargo.toml
+++ b/services/payment_service/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "payment-service"
+name = "payment_service"
 version = { workspace = true }
 edition = { workspace = true }
 authors = { workspace = true }
