feat: implement shared/auth crate with Casbin RBAC integration
- Create shared/auth crate with Casbin 2.0 and sqlx-adapter 1.8
- Implement multi-tenant RBAC model with domain support (sub, dom, obj, act)
- Add model.conf with comprehensive documentation
- Implement enforcer.rs with:
  - create_enforcer: Initialize Casbin with PostgreSQL adapter
  - enforce: Check user permissions
  - add/remove_policy: Manage role policies
  - add/remove_role_for_user: Assign roles to users
  - get_roles_for_user: Query user roles
- Use Arc<RwLock<Enforcer>> for thread-safe sharing
- Enable auto-save for policies to PostgreSQL
- Add comprehensive inline documentation and examples
- Update workspace Cargo.toml to include shared/auth

Dependencies:
- casbin 2.0 (with runtime-tokio, logging, incremental features)
- sqlx-adapter 1.8 (PostgreSQL adapter for Casbin policies)
- axum 0.7 (for future middleware integration)

TODO:
- Implement Axum middleware for JWT + Casbin enforcement
- Implement RequireRole and RequirePermission extractors
- Create database migration for casbin_rule table
- Add integration tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "shared/config",
     "shared/types",
     "shared/db",
+    "shared/auth",
 ]
 
 resolver = "2"
@@ -73,6 +74,7 @@ shared_jwt = { path = "shared/jwt" }
 shared_config = { path = "shared/config" }
 shared_types = { path = "shared/types" }
 shared_db = { path = "shared/db" }
+shared_auth = { path = "shared/auth" }
 
 # User service crates (internal)
 user_service_core = { path = "services/user_service/core" }
