--- a/services/user_service/core/Cargo.toml
+++ b/services/user_service/core/Cargo.toml
@@ -11,6 +11,7 @@ shared_types = { workspace = true }
 
 # External deps
 serde = { workspace = true }
+serde_json = { workspace = true }
 uuid = { workspace = true }
 chrono = { workspace = true }
 async-trait = { workspace = true }
