--- a/services/user_service/infra/Cargo.toml
+++ b/services/user_service/infra/Cargo.toml
@@ -18,3 +18,4 @@ chrono = { workspace = true }
 async-trait = { workspace = true }
 bcrypt = { workspace = true }
 tracing = { workspace = true }
+serde_json = { workspace = true }
