--- a/services/user_service/api/Cargo.toml
+++ b/services/user_service/api/Cargo.toml
@@ -15,6 +15,7 @@ user_service_infra = { workspace = true }
 shared_error = { workspace = true }
 shared_config = { workspace = true }
 shared_db = { workspace = true }
+shared-auth = { workspace = true }
 
 # Axum & web
 axum = { workspace = true }
