--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"]
 jsonwebtoken = "9.2"
 bcrypt = "0.15"
 validator = { version = "0.16", features = ["derive"] }
+sha2 = "0.10"
 
 # Async traits
 async-trait = "0.1"
