--- a/services/user_service/infra/Cargo.toml
+++ b/services/user_service/infra/Cargo.toml
@@ -19,3 +19,4 @@ async-trait = { workspace = true }
 bcrypt = { workspace = true }
 tracing = { workspace = true }
 serde_json = { workspace = true }
+sha2 = { workspace = true }
