feat(user-service): add IP address and User-Agent extraction for sessions
## Changes

### Request Metadata Extraction
- Create ClientInfo custom extractor with IP and User-Agent
- Support X-Forwarded-For, X-Real-IP headers (proxy-aware)
- Fall back to ConnectInfo socket address
- Comprehensive unit tests for IP extraction logic

### Service Layer Updates
- Update AuthService trait to accept optional ip_address and user_agent
- Update AuthServiceImpl register, login, refresh methods
- Sessions now store actual client IP and User-Agent

### Handler Updates
- Update register, login, refresh_token handlers to use ClientInfo extractor
- Clean extractor ordering compatible with Axum 0.8
- Enable ConnectInfo middleware via into_make_service_with_connect_info

### Dependencies
- Add async-trait to user_service_api (required for custom extractor)

### Testing
- Unit tests for IP extraction priority (X-Forwarded-For > X-Real-IP > ConnectInfo)
- Unit tests for User-Agent extraction

Resolves #6 (Extract IP and User-Agent in session management)
Phase 3 - Session metadata tracking complete

--- a/services/user_service/api/Cargo.toml
+++ b/services/user_service/api/Cargo.toml
@@ -40,6 +40,7 @@ tracing-subscriber = { workspace = true }
 uuid = { workspace = true }
 chrono = { workspace = true }
 validator = { workspace = true }
+async-trait = { workspace = true }
 
 [features]
 default = []
