feat: enhance list_users endpoint with role and status filtering
- Add role and status query parameters to ListUsersQuery struct
- Update AuthService trait and implementation to support filtering
- Update UserRepository trait and implementation with dynamic SQL queries
- Enhance OpenAPI documentation with new filter parameters
- Update task status and log progress

Task: V1_MVP/03_User_Service/3.3_User_Management/task_03.03.01_list_users_in_tenant.md

--- a/shared/auth/Cargo.toml
+++ b/shared/auth/Cargo.toml
@@ -43,3 +43,4 @@ tracing = { workspace = true }
 
 [dev-dependencies]
 tokio-test = "0.4"
+sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-rustls"] }
