--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -105,8 +105,15 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y postgresql postgresql-contrib
           sudo systemctl start postgresql
-          sudo -u postgres psql -c "CREATE DATABASE test_db;"
-          sudo -u postgres psql -c "CREATE USER postgres WITH PASSWORD 'postgres';"
+
+          # Create test database if it doesn't exist (idempotent)
+          sudo -u postgres psql -c "SELECT 1 FROM pg_database WHERE datname = 'test_db';" | grep -q 1 || \
+          sudo -u postgres createdb test_db
+
+          # Set password for postgres user if not already set (idempotent)
+          sudo -u postgres psql -c "ALTER USER postgres PASSWORD 'postgres';" 2>/dev/null || true
+
+          # Grant privileges (idempotent)
           sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE test_db TO postgres;"
 
       - name: Run Integration Tests
@@ -114,7 +121,7 @@ jobs:
           cd services/user_service/api
           cargo test --test security -- --ignored --test-threads=1 --nocapture
         env:
-          DATABASE_URL: postgres://postgres:postgres@localhost:5432/test_db
+          DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
           JWT_SECRET: ${{ secrets.TEST_JWT_SECRET }}
       
       - name: Upload to Codecov
