--- a/infra/docker_compose/docker-compose.yml
+++ b/infra/docker_compose/docker-compose.yml
@@ -45,8 +45,10 @@ services:
       retries: 5
 
   minio:
-    image: minio/minio:latest
+    image: minio/minio:RELEASE.2025-01-07T18-02-08Z
     container_name: minio_storage
+    # ⚠️ Development-only credentials - DO NOT use in production
+    # For production: use .env file or secure secret injection
     environment:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
@@ -57,8 +59,13 @@ services:
     volumes:
       - minio_data:/data
     command: server /data --console-address ":9001"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/ready"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
   minio-init:
-    image: minio/mc:latest
+    image: minio/mc:RELEASE.2025-01-07T18-02-08Z
     container_name: minio_init
     depends_on:
       minio:
@@ -66,6 +73,7 @@ services:
     volumes:
       - ./infra/init-minio.sh:/init-minio.sh:ro
     command: sh /init-minio.sh
+    # ⚠️ Development-only credentials - must match minio service credentials
     environment:
       - MC_HOST_local=http://minioadmin:minioadmin@minio:9000
 
