--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ authors = ["tymon3568 <tymon3568@gmail.com>"]
 tokio = { version = "1", features = ["full"] }
 
 # Axum - web framework
-axum = "0.8"
+axum = { version = "0.8", features = ["multipart"] }
 
 # Serde - serialization
 serde = { version = "1.0", features = ["derive"] }
