fix: address PR #12 code review suggestions
- Remove duplicate task file in 03_User_service folder (mis-cased)
- Update task metadata: align assignee and last updated date
- Fix regex pattern in task-helper.sh for dependency parsing
- Add keyMatch2 to Casbin model for wildcard path matching
- Switch from write lock to read lock in Casbin middleware (performance)
- Implement case-insensitive Bearer token parsing per OAuth spec
- Clean up unused imports

All 6 critical/major review suggestions resolved.
Compilation verified: cargo check --workspace passes with no warnings.

--- a/shared/auth/model.conf
+++ b/shared/auth/model.conf
@@ -17,7 +17,7 @@ g = _, _, _
 e = some(where (p.eft == allow))
 
 [matchers]
-m = g(r.sub, p.sub, r.dom) && r.dom == p.dom && r.obj == p.obj && r.act == p.act
+m = g(r.sub, p.sub, r.dom) && r.dom == p.dom && keyMatch2(r.obj, p.obj) && r.act == p.act
 
 # Explanation:
 # - sub: subject (user_id or role name like "admin", "manager", "user")
@@ -28,9 +28,12 @@ m = g(r.sub, p.sub, r.dom) && r.dom == p.dom && r.obj == p.obj && r.act == p.act
 # The matcher ensures:
 # 1. g(r.sub, p.sub, r.dom): Check if request subject has the role in policy (supports role hierarchy)
 # 2. r.dom == p.dom: Ensure request and policy are in same tenant (multi-tenant isolation)
-# 3. r.obj == p.obj: Resource matches
+# 3. keyMatch2(r.obj, p.obj): Resource matches with wildcard support (* and :param)
+#    - Supports "/api/v1/users/*" matching "/api/v1/users/123"
+#    - Supports "/api/v1/users/:id" matching "/api/v1/users/123"
 # 4. r.act == p.act: Action matches
 #
 # Example policies:
 # p, admin, tenant-123, /api/v1/products, GET     -> Admin role can GET products in tenant-123
+# p, admin, tenant-123, /api/v1/users/*, GET      -> Admin can access any user endpoint
 # g, user-456, admin, tenant-123                   -> User 456 has admin role in tenant-123
