feat(user-service): implement role and permission management APIs [TaskID: 03.02.11]
- Created comprehensive admin DTOs for role/permission management
- Implemented 8 new admin endpoints:
  * Role CRUD operations (create, list, update, delete)
  * User role assignment/removal
  * Permission listing
- Added AppError::Conflict variant for resource conflicts
- All endpoints protected with RequireAdmin authorization
- Validation for role names (lowercase alphanumeric + underscore)
- Protection for system roles (admin, user)
- Prevents deletion of roles assigned to users
- Prevents removing user's last role
- Updated OpenAPI documentation with new endpoints and schemas
- Added regex and lazy_static dependencies

Related: task_03.02.11_create_role_permission_apis.md

--- a/services/user_service/core/Cargo.toml
+++ b/services/user_service/core/Cargo.toml
@@ -19,3 +19,5 @@ validator = { workspace = true }
 utoipa = { workspace = true }
 sqlx = { workspace = true }
 zxcvbn = { workspace = true }
+regex = { workspace = true }
+lazy_static = { workspace = true }
