fix: Update sqlx-adapter config and casbin_rule schema for compatibility
- Add features to sqlx-adapter: postgres, runtime-tokio-rustls
- Create migration to set v4, v5 as NOT NULL in casbin_rule table
- Fix model.conf path in test helpers (use absolute path)
- Remove manual migration running from test setup (migrations pre-run)
- Add missing UserRepository and TenantRepository trait imports

This ensures sqlx-adapter 1.8.0 works correctly with sqlx 0.8.6 and
allows security tests to run properly.

--- a/shared/auth/Cargo.toml
+++ b/shared/auth/Cargo.toml
@@ -16,7 +16,7 @@ shared_jwt = {workspace = true}
 shared_types = {workspace = true}
 # Database
 sqlx = {workspace = true}
-sqlx-adapter = "1.8"
+sqlx-adapter = {version = "1.8.0", default-features = false, features = ["postgres", "runtime-tokio-rustls"]}
 # Error handling
 thiserror = {workspace = true}
 # Async runtime
