feat(testing): Setup test framework with utilities and mocks [TaskID: 03.04.01]
Implemented comprehensive unit test framework foundation:

Sub-tasks completed:
- [x] 1. Set up testing dependencies (mockall, fake, proptest, criterion, tarpaulin)
- [x] 2. Create test utilities and helper functions

Changes:
- Added testing dependencies to workspace Cargo.toml
- Created test_utils.rs: UserBuilder, TenantBuilder, test data factories
- Created mocks.rs: MockUserRepo, MockTenantRepo, MockSessionRepo
- Created unit_tests.rs: Example auth and validation tests
- Updated test READMEs for better organization
- Documentation: security_test_report.md in docs/, test docs in test dirs

Test structure:
- Core tests: Pure unit tests with mocks (no DB)
- API tests: Integration tests + security tests (require DB)
- All core tests passing ✅

Files:
+ Cargo.toml (workspace test dependencies)
+ services/user_service/core/Cargo.toml
+ services/user_service/core/tests/{test_utils.rs, mocks.rs, mod.rs, README.md}
+ services/user_service/api/Cargo.toml
+ services/user_service/api/tests/unit_tests.rs
~ services/user_service/api/tests/README.md (updated)

Related: task_03.04.01_create_unit_test_framework.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,10 +25,15 @@ bcrypt = "0.15"
 chrono = {version = "0.4", features = ["serde"]}
 # Configuration
 config = "0.14"
+criterion = {version = "0.5", features = ["html_reports"]}
 dotenvy = "0.15"
+fake = {version = "2.9", features = ["derive", "uuid", "chrono"]}
 # Auth & security
 jsonwebtoken = "9.2"
 lazy_static = "1.4"
+# Testing utilities
+mockall = "0.13"
+proptest = "1.4"
 regex = "1.10"
 # Serde - serialization
 serde = {version = "1.0", features = ["derive"]}
@@ -44,6 +49,7 @@ shared_jwt = {path = "shared/jwt"}
 shared_types = {path = "shared/types"}
 # SQLx - database
 sqlx = {version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono"]}
+tarpaulin = "0.31"
 thiserror = "1.0"
 # Tokio - async runtime
 tokio = {version = "1", features = ["full"]}
@@ -62,6 +68,7 @@ utoipa-swagger-ui = {version = "9", features = ["axum"]}
 # UUID & DateTime
 uuid = {version = "1.6", features = ["v4", "v7", "serde"]}
 validator = {version = "0.16", features = ["derive"]}
+wiremock = "0.6"
 zxcvbn = "3.1"
 
 [workspace.package]
