--- a/services/user_service/api/Cargo.toml
+++ b/services/user_service/api/Cargo.toml
@@ -34,15 +34,20 @@ validator = {workspace = true}
 
 [dev-dependencies]
 bcrypt = {workspace = true}
+criterion = {workspace = true}
+fake = {workspace = true}
 futures = "0.3"
 http-body-util = "0.1"
 jsonwebtoken = "9.2"
+mockall = {workspace = true}
+proptest = {workspace = true}
 shared_jwt = {workspace = true}
 sqlx = {workspace = true, features = ["postgres", "runtime-tokio-rustls", "macros"]}
 tokio-test = "0.4"
 # Test dependencies
 tower = {workspace = true}
 urlencoding = "2.1"
+wiremock = {workspace = true}
 
 [features]
 default = []
