feat(test): Set up test coverage reporting with Tarpaulin + Codecov
Sub-task 5: Set up test coverage reporting

Added Coverage Tools Integration:
- tarpaulin.toml: Configuration for cargo-tarpaulin (alternative to llvm-cov)
  - LCOV + HTML + JSON output formats
  - Workspace-wide coverage with proper exclusions
  - 5min timeout, LLVM engine for accuracy

- scripts/coverage.sh: Helper script for local coverage generation
  - Auto-installs cargo-tarpaulin if missing
  - Options: --upload, --open, --package
  - Generates HTML reports + uploads to Codecov
  - Calculates and displays coverage percentage

- docs/testing/COVERAGE_GUIDE.md: Comprehensive coverage documentation
  - Two-tool approach: cargo-llvm-cov (CI) + cargo-tarpaulin (local)
  - Quick start guides for both tools
  - CI/CD integration with GitHub Actions
  - Codecov configuration explained
  - Best practices for testable code
  - Troubleshooting section
  - Commands cheat sheet

Enhanced Existing:
- .github/workflows/test-coverage.yml: Added tarpaulin installation (optional)
- services/user_service/api/tests/README.md: Added links to coverage guide

Coverage Strategy:
- Primary: cargo-llvm-cov in CI/CD (fast, accurate)
- Alternative: cargo-tarpaulin for local dev (detailed HTML reports)
- Both generate LCOV format → uploaded to Codecov
- Target: 80% project coverage, 75% patch coverage

Codecov Integration:
- Automatic PR comments with coverage links
- Service-specific flags (user-service, inventory-service, etc.)
- Coverage trends tracking
- Per-file coverage visualization

Task: V1_MVP/03_User_Service/3.4_Testing/task_03.04.01

--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -56,12 +56,18 @@ jobs:
         with:
           tool: cargo-llvm-cov
 
+      - name: Install cargo-tarpaulin (alternative coverage tool)
+        run: |
+          cargo install cargo-tarpaulin || echo "Tarpaulin installation skipped (optional)"
+
       - name: Run tests with coverage
         run: |
           cargo llvm-cov --workspace \
             --all-features \
             --lcov \
             --output-path lcov.info
+        env:
+          RUSTFLAGS: "--cfg uuid_unstable"
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
