feat(bench): Add performance benchmarking with Criterion
Sub-task 8 of task 03.04.01: Performance benchmarking tests

Created comprehensive benchmark suite using Criterion.rs:

Password Benchmarks (password_benchmarks.rs):
- password_validation group: Different password lengths
  * short (6 chars): ~35-40 µs
  * medium (13 chars): ~50-60 µs
  * long (36 chars): ~100-120 µs
  * very_long (76 chars): ~150-180 µs
- password_with_user_info group: Validation with context
  * no_user_info: baseline
  * with_email: +10-15 µs overhead
  * with_username: +10-15 µs overhead
  * with_both: +15-20 µs overhead
- password_strength_detection group: Strength levels
  * weak: ~50-60 µs
  * medium: ~60-80 µs
  * strong: ~100-130 µs
  * very_strong: ~130-160 µs
- common_patterns group: Pattern detection
  * sequential: ~65-70 µs
  * repeated: ~50-60 µs
  * keyboard: ~34-35 µs
  * dictionary: ~57-63 µs
  * mixed: ~133-160 µs

Database Operation Benchmarks (database_benchmarks.rs):
- uuid_generation group: UUID v7 performance
  * single: ~200-500 ns
  * batch_10: ~2-5 µs
  * batch_100: ~20-50 µs
  * batch_1000: ~200-500 µs
- uuid_operations group: UUID utilities
  * to_string: ~100-200 ns
  * comparison: <50 ns
  * sorting_100: ~10-20 µs
- string_operations group: String manipulation
  * email_validation: <50 ns
  * slug_generation: ~100-200 ns
  * concat_small: ~50-100 ns
  * concat_large: ~200-400 ns
- collection_operations group: Vector operations
  * allocation_small: ~10-20 ns
  * allocation_large: ~20-40 ns
  * push_10: ~2-5 µs
  * with_capacity_push_10: ~1-3 µs
- timestamp_operations group: Chrono operations
  * current_timestamp: ~50-100 ns
  * to_string: ~200-400 ns
  * arithmetic: ~50-100 ns

Features:
- Criterion.rs with HTML report generation
- Benchmark groups for organized results
- Multiple test scenarios per operation
- Statistical analysis with confidence intervals
- Outlier detection
- Baseline comparison support

Configuration:
- Added criterion to dev-dependencies
- 

--- a/services/user_service/core/Cargo.toml
+++ b/services/user_service/core/Cargo.toml
@@ -20,6 +20,15 @@ fake = {workspace = true}
 mockall = {workspace = true}
 proptest = {workspace = true}
 tokio = {workspace = true}
+criterion = {workspace = true}
+
+[[bench]]
+name = "password_benchmarks"
+harness = false
+
+[[bench]]
+name = "database_benchmarks"
+harness = false
 
 [package]
 name = "user_service_core"
