feat: add Kanidm Identity Provider to infrastructure
Phase 2: Infrastructure Setup - Kanidm Integration

Docker Compose:
- kanidm service (v1.4.3) on port 8300
- kanidm-init for auto-configuration
- kanidm_data volume for persistence

Files Added:
- kanidm-server.toml: Server configuration
- init-kanidm.sh: OAuth2 setup script
- KANIDM_SETUP.md: Complete setup guide

Features:
- OAuth2 client 'anthill' with PKCE
- Test tenant groups (acme, globex)
- Test users (alice, bob, charlie)
- Redirect URLs for dev/prod

See KANIDM_SETUP.md for usage instructions

--- a/infra/docker_compose/docker-compose.yml
+++ b/infra/docker_compose/docker-compose.yml
@@ -77,7 +77,45 @@ services:
     environment:
       - MC_HOST_local=http://minioadmin:minioadmin@minio:9000
 
+  kanidm:
+    image: kanidm/server:1.4.3
+    container_name: kanidm_idm
+    environment:
+      KANIDM_DOMAIN: localhost
+      KANIDM_ORIGIN: http://localhost:8300
+      # ⚠️ Development-only - DO NOT use in production
+      KANIDM_LOG_LEVEL: info
+      # Use SQLite for dev (production should use PostgreSQL)
+      KANIDM_DB_TYPE: sqlite
+    ports:
+      - "8300:8300" # HTTPS/HTTP port
+      - "8301:8301" # LDAP port (optional)
+    volumes:
+      - kanidm_data:/data
+      - ./kanidm-server.toml:/data/server.toml:ro
+    command: server -c /data/server.toml
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8300/status || exit 1"]
+      interval: 15s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
+
+  kanidm-init:
+    image: kanidm/tools:1.4.3
+    container_name: kanidm_init
+    depends_on:
+      kanidm:
+        condition: service_healthy
+    volumes:
+      - ./init-kanidm.sh:/init-kanidm.sh:ro
+    environment:
+      KANIDM_URL: http://kanidm:8300
+    command: sh /init-kanidm.sh
+    restart: on-failure
+
 volumes:
   postgres_data:
   redis_data:
   minio_data:
+  kanidm_data:
